parser.output
Terminales no usados en la gramática

    EQUALS


Gramática

    0 $accept: prog $end

    1 prog: INSTRUCCIONES

    2 INSTRUCCIONES: ε
    3              | INSTRUCCION INSTRUCCIONES

    4 INSTRUCCION: DECLARACION
    5            | FUNCIONES

    6 DECLARACION: TIPOS_DATOS_ARCHIVOS PUNTERO NOMBRE_VARIABLE PUNTOCOMA

    7 TIPOS_DATOS_ARCHIVOS: TIPO_DATO_ARCHIVO

    8 FUNCIONES: FUNCION LEFTP RIGHTP PUNTOCOMA

    9 FUNCION: FUNCION_ARCHIVO_FOPEN
   10        | FUNCION_ARCHIVO_FSCANF
   11        | FUNCION_ARCHIVO_FPRINTF
   12        | FUNCION_ARCHIVO_FCLOSE
   13        | OTHER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TIPO_DATO_ARCHIVO <tipo_dato_archivo> (258) 7
    FUNCION_ARCHIVO_FOPEN <funcion_archivo_fopen> (259) 9
    FUNCION_ARCHIVO_FSCANF <funcion_archivo_fscanf> (260) 10
    FUNCION_ARCHIVO_FPRINTF <funcion_archivo_fprintf> (261) 11
    FUNCION_ARCHIVO_FCLOSE <funcion_archivo_fclose> (262) 12
    NOMBRE_VARIABLE <nombre_variable> (263) 6
    LEFTP (264) 8
    RIGHTP (265) 8
    PUNTOCOMA (266) 6 8
    EQUALS (267)
    PUNTERO (268) 6
    OTHER (269) 13


No terminales con las reglas donde aparecen

    $accept (15)
        on left: 0
    prog (16)
        on left: 1
        on right: 0
    INSTRUCCIONES (17)
        on left: 2 3
        on right: 1 3
    INSTRUCCION (18)
        on left: 4 5
        on right: 3
    DECLARACION (19)
        on left: 6
        on right: 4
    TIPOS_DATOS_ARCHIVOS (20)
        on left: 7
        on right: 6
    FUNCIONES (21)
        on left: 8
        on right: 5
    FUNCION (22)
        on left: 9 10 11 12 13
        on right: 8


Estado 0

    0 $accept: • prog $end

    TIPO_DATO_ARCHIVO        desplazar e ir al estado 1
    FUNCION_ARCHIVO_FOPEN    desplazar e ir al estado 2
    FUNCION_ARCHIVO_FSCANF   desplazar e ir al estado 3
    FUNCION_ARCHIVO_FPRINTF  desplazar e ir al estado 4
    FUNCION_ARCHIVO_FCLOSE   desplazar e ir al estado 5
    OTHER                    desplazar e ir al estado 6

    $default  reduce usando la regla 2 (INSTRUCCIONES)

    prog                  ir al estado 7
    INSTRUCCIONES         ir al estado 8
    INSTRUCCION           ir al estado 9
    DECLARACION           ir al estado 10
    TIPOS_DATOS_ARCHIVOS  ir al estado 11
    FUNCIONES             ir al estado 12
    FUNCION               ir al estado 13


Estado 1

    7 TIPOS_DATOS_ARCHIVOS: TIPO_DATO_ARCHIVO •

    $default  reduce usando la regla 7 (TIPOS_DATOS_ARCHIVOS)


Estado 2

    9 FUNCION: FUNCION_ARCHIVO_FOPEN •

    $default  reduce usando la regla 9 (FUNCION)


Estado 3

   10 FUNCION: FUNCION_ARCHIVO_FSCANF •

    $default  reduce usando la regla 10 (FUNCION)


Estado 4

   11 FUNCION: FUNCION_ARCHIVO_FPRINTF •

    $default  reduce usando la regla 11 (FUNCION)


Estado 5

   12 FUNCION: FUNCION_ARCHIVO_FCLOSE •

    $default  reduce usando la regla 12 (FUNCION)


Estado 6

   13 FUNCION: OTHER •

    $default  reduce usando la regla 13 (FUNCION)


Estado 7

    0 $accept: prog • $end

    $end  desplazar e ir al estado 14


Estado 8

    1 prog: INSTRUCCIONES •

    $default  reduce usando la regla 1 (prog)


Estado 9

    3 INSTRUCCIONES: INSTRUCCION • INSTRUCCIONES

    TIPO_DATO_ARCHIVO        desplazar e ir al estado 1
    FUNCION_ARCHIVO_FOPEN    desplazar e ir al estado 2
    FUNCION_ARCHIVO_FSCANF   desplazar e ir al estado 3
    FUNCION_ARCHIVO_FPRINTF  desplazar e ir al estado 4
    FUNCION_ARCHIVO_FCLOSE   desplazar e ir al estado 5
    OTHER                    desplazar e ir al estado 6

    $default  reduce usando la regla 2 (INSTRUCCIONES)

    INSTRUCCIONES         ir al estado 15
    INSTRUCCION           ir al estado 9
    DECLARACION           ir al estado 10
    TIPOS_DATOS_ARCHIVOS  ir al estado 11
    FUNCIONES             ir al estado 12
    FUNCION               ir al estado 13


Estado 10

    4 INSTRUCCION: DECLARACION •

    $default  reduce usando la regla 4 (INSTRUCCION)


Estado 11

    6 DECLARACION: TIPOS_DATOS_ARCHIVOS • PUNTERO NOMBRE_VARIABLE PUNTOCOMA

    PUNTERO  desplazar e ir al estado 16


Estado 12

    5 INSTRUCCION: FUNCIONES •

    $default  reduce usando la regla 5 (INSTRUCCION)


Estado 13

    8 FUNCIONES: FUNCION • LEFTP RIGHTP PUNTOCOMA

    LEFTP  desplazar e ir al estado 17


Estado 14

    0 $accept: prog $end •

    $default  aceptar


Estado 15

    3 INSTRUCCIONES: INSTRUCCION INSTRUCCIONES •

    $default  reduce usando la regla 3 (INSTRUCCIONES)


Estado 16

    6 DECLARACION: TIPOS_DATOS_ARCHIVOS PUNTERO • NOMBRE_VARIABLE PUNTOCOMA

    NOMBRE_VARIABLE  desplazar e ir al estado 18


Estado 17

    8 FUNCIONES: FUNCION LEFTP • RIGHTP PUNTOCOMA

    RIGHTP  desplazar e ir al estado 19


Estado 18

    6 DECLARACION: TIPOS_DATOS_ARCHIVOS PUNTERO NOMBRE_VARIABLE • PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 20


Estado 19

    8 FUNCIONES: FUNCION LEFTP RIGHTP • PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 21


Estado 20

    6 DECLARACION: TIPOS_DATOS_ARCHIVOS PUNTERO NOMBRE_VARIABLE PUNTOCOMA •

    $default  reduce usando la regla 6 (DECLARACION)


Estado 21

    8 FUNCIONES: FUNCION LEFTP RIGHTP PUNTOCOMA •

    $default  reduce usando la regla 8 (FUNCIONES)
